--- a/testfbapp/test.html
+++ b/testfbapp/test.html
@@ -4,7 +4,7 @@
  		<!-- Meta tags -->
 
 	  <meta property="og:type"   content="avaaz-org:campaign" /> 
-	  <meta property="og:url"    content="http://stoyan-popov.github.io/facebook-app/testfbapp/" /> 
+	  <meta property="og:url"    content="http://stoyan-popov.github.io/facebook-app/testfbapp/test.html" /> 
 	  <meta property="og:title"  content="Facebook Tagging Test Campaign" /> 
 	  <meta property="og:image" content="https://avaazdo.s3.amazonaws.com/do_generic_en.jpeg"/>
  	  <meta property="og:site_name" content="Avaaz"/>
