--- a/testfbapp/test.html
+++ b/testfbapp/test.html
@@ -3,7 +3,7 @@
  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# testappavaaz: http://ogp.me/ns/fb/testappavaaz#">
  		<!-- Meta tags -->
 
-	  <meta property="og:type"   content="campaign" /> 
+	  <meta property="og:type"   content="avaaz-org:campaign" /> 
 	  <meta property="og:url"    content="http://stoyan-popov.github.io/facebook-app/testfbapp/" /> 
 	  <meta property="og:title"  content="Facebook Tagging Test Campaign" /> 
 	  <meta property="og:image" content="https://avaazdo.s3.amazonaws.com/do_generic_en.jpeg"/>
