--- a/testfbapp/index.html
+++ b/testfbapp/index.html
@@ -6,7 +6,7 @@
 	  <meta property="og:type"   content="testappavaaz_:campaign" /> 
 	  <meta property="og:url"    content="http://stoyan-popov.github.io/facebook-app/testfbapp/" /> 
 	  <meta property="og:title"  content="Facebook Tagging Prototype" /> 
-	  <meta property="og:image"  content="https://dtoakley.github.io/testfbapp/img/App.png" /> 
+	  <meta property="og:image"  content="http://stoyan-popov.github.io/facebook-app/testfbapp/img/App.png" /> 
 
 	<meta charset="UTF-8">
 	<title>test fb app</title>
