--- a/testfbapp/index.html
+++ b/testfbapp/index.html
@@ -3,8 +3,8 @@
  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# testappavaaz: http://ogp.me/ns/fb/testappavaaz#">
  		<!-- Meta tags -->
 	  <meta property="fb:app_id" content="905147802828926" /> 
-	  <meta property="og:type"   content="testappavaaz:petition" /> 
-	  <meta property="og:url"    content="https://dtoakley.github.io/testfbapp/" /> 
+	  <meta property="og:type"   content="testappavaaz_:campaign" /> 
+	  <meta property="og:url"    content="http://stoyan-popov.github.io/facebook-app/testfbapp/" /> 
 	  <meta property="og:title"  content="Facebook Tagging Prototype" /> 
 	  <meta property="og:image"  content="https://dtoakley.github.io/testfbapp/img/App.png" /> 
 
